// This file is part of OpenTSDB.
// Copyright (C) 2018  The OpenTSDB Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_package = "net.opentsdb.data.pbuf";
option java_outer_classname = "NumericSegmentPB";

/*
 * A numeric sequence of the net.opentsdb.data.types.NumericType variety.
 */
message NumericSegment {
  
  /* The raw binary data encoded. */
  bytes data = 1;
  
  /* How many bytes the timestamp offsets are encoded on. */
  uint32 encoded_on = 2;
  
  /* The Java ChronoUnit ordinal of the resolution. */
  uint32 resolution = 3;
}